--- a/src/index.css
+++ b/src/index.css
@@ -29,19 +29,23 @@ h1 {
   width: 100%;
   height: 100vh;
   position: relative;
-  background-color: rgba(0, 0, 0, 0.4);
   color: #fff;
+}
+
+.app > * {
+  position: relative;
+  z-index: 100;
 }
 
 .app::before {
   content: "";
-  background: url("./assets/sunset.jpg") no-repeat center center/cover;
   position: absolute;
+  background-color: rgba(0, 0, 0, 0.4);
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  z-index: -1;
+  z-index: 1;
 }
 
 .container {
@@ -78,6 +82,7 @@ h1 {
 .app .description {
   position: relative;
   right: -90%;
+  top: 50%;
   transform-origin: 0 0;
   transform: rotate(269deg);
 }
